# auto-code-commenter

./: .dockerignore  .env.example  .gitignore  .pre-commit-hooks.yaml  Dockerfile  LICENSE  Makefile  README.md  action.yml  ai-commenter.yaml  ai-review.yaml  code_review_result.json  entrypoint.py  library_db.json  pyproject.toml  requirements.txt  startup_and_run.sh
.github/workflows/: ai-code-comment.yaml  ai-review.yml
app/: cli.py  pipeline.py
app/agents/: comment_agent.py  common_agent.py
app/core/: models.py  models_deepseek.py  models_openai.py
app/utils/: config_loader.py  file_handler.py
bot/: cli.py  config_bedrock.yaml  config_deepseek.yaml  config_openai.yaml  pipeline.py  requirements.txt
bot/agents/: comment_agent.py  comment_agent.py.bak
bot/core/: models.py  models.py.bak  models_bedrock.py  models_bedrock.py.bak  models_custom.py  models_deepseek.py.bak  models_openai.py.bak
bot/utils/: config_loader.py.bak  file_handler.py  file_handler.py.bak
notebooks/: ETL.ipynb
src/: app.py  app.py.bak  ec_rds_vpc.tf  test.sql
src/cleocog/: db_service.og.txt  db_service.py
src/functions/: binary_serach.py  fib.py  fib.py.bak  file_reader.py  merge.py  nested_list.og.txt  nested_list.py  nested_list.py.bak  palindrome.py
src/game/: dice.py  dice.py.bak  ec2_rds.og.txt  ec2_rds.tf  ec_rds_vpc.og.txt  new_commented_game.og.txt  new_commented_game.py  partly_commented_game.py
src/juypter_notebooks/: blank_cell_notebook.ipynb  notebook_with_other_magics.ipynb  notebook_with_other_magics.ipynb.bak
src/sql/: test.sql
src/sql2/: test.sql
