[project]
name = "auto-code-commenter"
version = "0.1.0"
description = ""
authors = [
    {name = "Manav Khandurie",email = "manavkhandurie@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langchain (>=0.3.25,<0.4.0)",
    "ollama (>=0.4.9,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
