[project]
name = "auto-code-commenter"
version = "0.1.0"
description = ""
authors = [
    {name = "Manav Khandurie",email = "manavkhandurie@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langchain (>=0.3.25,<0.4.0)",
    "ollama (>=0.4.9,<0.5.0)",
    "langchain-community (>=0.3.24,<0.4.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "openai (>=1.82.0,<2.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "boto3 (>=1.38.27,<2.0.0)",
    "langchain-aws (>=0.2.24,<0.3.0)"
]

[tool.poetry]
packages = [{ include = "app" }]


[tool.poetry.scripts]
comment-code = "app.cli:main"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
